Replace lazydf by safeserializer